applications/forgejo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: forgejo:gateway.networking.k8s.io/HTTPRoute:forgejo/forgejo
    gethomepage.dev/description: Forgejo
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/href: https://git.thegraveshouse.com
    gethomepage.dev/icon: forgejo.png
    gethomepage.dev/name: Code Repository
    gethomepage.dev/pod-selector: app.kubernetes.io/name=forgejo
    gethomepage.dev/siteMonitor: https://git.thegraveshouse.com
    meta.helm.sh/release-name: forgejo
    meta.helm.sh/release-namespace: forgejo
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  name: forgejo
  namespace: forgejo
spec:
  hostnames:
  - git.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: forgejo-http
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
